// protoc --go_out=./pkg --go_opt=paths=source_relative --go-grpc_out=./pkg --go-grpc_opt=paths=source_relative ./api/chatpb/chat.proto
syntax = "proto3";

package  uint.v1;

option go_package="github.com/DimKush/go_sandbox/tree/main/grpc/grpc_simple/pkg/unit;unit_v1";

import "google/api/annotations.proto";

service GreetingSample {
  // Sends a greeting
  rpc GetUnitById (UnitId) returns (UnitsParamsResponce) {
    option(google.api.http) = {
      get: "/v1/{unit_id}"
    };
  }
}

message UnitId{
  uint64 unit_id = 1;
}

message Error{
  int32 status = 1;
  string error = 2;
}

message UnitsParamsResponce {
  uint64 id = 1;
  string unit_name = 2;
  string description = 3;
  Error  error = 4;
}

